# exp-rust-actix

./: .env  Cargo.toml  compose.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20240220_180000_create_table.rs
src/: app_state.rs  error.rs  lib.rs  main.rs
src/entities/: author.rs  mod.rs  post.rs  post_tag.rs  prelude.rs  sea_orm_active_enums.rs  tag.rs
src/services/: author.rs  error_exp.rs  mod.rs
