[workspace]
members = ["migration"]

[package]
name = "exp-rust-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.9.0", features = ["redis-actor-session"] }
actix-web = "4.5.1"
dotenvy = "0.15.7"
env_logger = "0.11.2"
log = "0.4.20"
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "debug-print"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
